--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
       </div>
 
       <div class="item-flex">
-        <div>
-          <picture class="rated"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
+        <div class="cont-rate">
+          <div class="stars"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
               src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
-              alt=""></picture>
+              alt=""></div>
           <h2>Rated 5 Stars in Reviews</h2>
         </div>
-        <div>
-          <picture class="rated"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
+        <div class="cont-rate">
+          <div class="stars"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
               src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
-              alt=""></picture>
+              alt=""></div>
           <h2>Rated 5 Stars in Report Guru</h2>
         </div>
-        <div>
-          <picture class="rated"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
+        <div class="cont-rate">
+          <div class="stars"><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img
             src="images/icon-star.svg" alt=""><img src="images/icon-star.svg" alt=""><img src="images/icon-star.svg"
-            alt=""></picture>
+            alt=""></div>
           <h2>Rated 5 Stars in BestTech</h2>
         </div>
       </div>
